<resources>
    <string name="app_name">Insul.in</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="logo">Logo</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title">Insul.in</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua..</string>
    <string name="article_photo">Article Photo</string>
    <string name="title_article">Title Article</string>
    <string name="content_article">Content Article</string>
    <string name="image_article">Image Article</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="about_application">Tentang Aplikasi</string>
    <string name="attribute_data">Atribusi Data</string>
    <string name="privacy">Kebijakan Privasi</string>
    <string name="title_activity_recomendation_product">RecomendationProductActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="client_id">1072370297958-f857b28dk6rqvneca3h4e2d96g7snmsm.apps.googleusercontent.com</string>
    <string name="day_name">Selamat Pagi, %1$s</string>
    <string name="frequency">Frekuensi</string>
    <string name="day">Hari</string>
    <string name="day_example">Senin</string>
    <string name="frequency_example">Setiap Hari</string>
    <string name="time">Waktu</string>
    <string name="set_reminder">Setel Pengingat</string>
    <string name="reminder_alert_title">⏰ Informasi Pengingat ⏰</string>
    <string name="reminder_alert_message">Pengingat disetel setiap minggu pukul 16.00</string>
    <string name="active">Aktifkan</string>
    <string name="time_stamp">00.00</string>
    <string name="delete">Hapus</string>
    <string name="diabetes_detection">Deteksi Diabetes</string>
    <string name="insulin">Insul.in</string>
    <string name="hello">Halo 👋🏻</string>
    <string name="welcome_login">Silahkan Login terlebih dahulu untuk menggunakan aplikasi Insul.in</string>
    <string name="login_with_google">Login dengan Google</string>
    <string name="detection">Deteksi</string>
    <string name="near_hospital">🏨 RS Terdekat</string>
    <string name="tips">💡 Tips</string>
    <string name="detail_information_hospital">Klik pin Rumah sakit untuk melihat informasi detail. Klik tombol untuk mendapatkan petunjuk arah</string>
    <string name="close">Close</string>
    <string name="back">Back</string>
    <string name="google_logo">Logo Google</string>
    <string name="arrow_forward">Arrow Forward</string>
    <string name="special_product">🎁 Produk khusus untuk Kamu 🎁</string>
    <string name="search_product">Kamu dapat menemukan berbagai produk yang ramah untuk Diabetes dibawah ini…</string>
    <string name="diabetes_test">🔬 Test Diabetes</string>
    <string name="daily_needs">🌾 Kebutuhan Harian</string>
    <string name="suplemen_and_vitamin"><![CDATA[💊 Suplemen dan Vitamin]]></string>
    <string name="snack_low_sugar">🍔 Snack Rendah Gula</string>
    <string name="copyright_insulin_team">© 2022 Insul.in Team</string>
    <string name="exit">Keluar</string>
    <string name="save_result">Simpan Hasil</string>
    <string name="result_detection">Hasil Deteksi</string>
    <string name="date_testing">Test pada 5 Mei 2022 | 17.00</string>
    <string name="low_risk">Risiko Rendah</string>
    <string name="congratulation_for_detection">Selamat, Kamu berpotensi rendah terkena diabetes dari hasil diagnosa awal dengan Insul.in</string>
    <string name="see_the_result">Lihat Hasil Diagnosis</string>
    <string name="tutup">Tutup</string>
    <string name="toggle">Icon Toggle</string>
    <string name="high_risk">Risiko Tinggi</string>
    <string name="high_risk_message">Wahh !!! Kamu memiliki potensi tinggi terkena diabetes, segera lakukan pengecekan lanjutan ke Dokter.</string>
    <string name="title_dialog">Judul Dialog</string>
    <string name="text_dialog_information">Ini merupakan text body pada dialog informasi, text akan nampak seperti ini</string>
    <string name="ok">OK</string>
    <string name="loading">Loading</string>
    <string name="near_hospital_location">Rumah Sakit Mitra Keluarga Kenjeran Surabaya</string>
    <string name="hospital_street">Jl. Kenjeran No. 100 Mulyorejo - Surabaya - Indonesia</string>
    <string name="get_direction">Dapatkan Petunjuk Arah</string>
    <string name="confirmation_diabetes">Konfirmasi Gejala Diabetes</string>
    <string name="checked_symptom">Cek gejala yang sudah anda inputkan pada data berikut ini. Klik lanjutkan untuk melihat hasil deteksi Diabetes.</string>
    <string name="kembali">Kembali</string>
    <string name="continues">Lanjutkan</string>
    <string name="lets_started">Ayo Mulai…</string>
    <string name="click_continue">Klik tombol lanjutkan untuk memulai proses deteksi Diabetes</string>
    <string name="question_image">Image Question</string>
    <string name="how_old_are_you">Berapakah usia Anda?</string>
    <string name="input_your_age">Masukan Usia Anda</string>
    <string name="question_prev">Prev Question</string>
    <string name="question_next">Next Question</string>
    <string name="you_are_a_person">Kamu Adalah seorang?</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="boy">Boy</string>
    <string name="man">Pria</string>
    <string name="woman">Wanita</string>
    <string name="navigate_before">Navigate Before</string>
    <string name="next_navigate">Next Navigate</string>
    <string name="question">Sebuah Pertanyaan</string>
    <string name="image_yes">Yes</string>
    <string name="yes">Ya</string>
    <string name="image_no">No</string>
    <string name="no">Tidak</string>
    <string name="read_description_for_your_health">Bacaan Untukmu agar tetap sehat</string>
    <string name="arrow_down">Arrow Down</string>
    <string name="checked_to_doctor">Segera Lakukan pengecekan ke Dokter</string>
    <string name="checked_near_hospital">Cek RS Terdekat</string>
    <string name="recommended_product">Produk yang disarankan</string>
    <string name="you_dont_have_history">- Anda tidak memiliki riwayat deteksi -</string>
    <string name="try_detection">Coba Deteksi</string>
    <string name="welcome_user">Selamat Pagi, John Doe 🌞🌛</string>
    <string name="help">Help</string>
    <string name="home_text_sub_title">🤩 Hanya ada di Insul.in</string>
    <string name="shortcut_hospital">Hospital</string>
    <string name="near_hospital_home">Rumah Sakit Terdekat</string>
    <string name="affiliation">Affiliation</string>
    <string name="recommended_product_diabetes">Produk Diabetes Rekomendasi</string>
    <string name="community">Community</string>
    <string name="diabetes_community">Komunitas Diabetes</string>
    <string name="consultation">Consultation</string>
    <string name="consultation_with_doctor">Konsultasi dengan Dokter</string>
    <string name="lab">Lab</string>
    <string name="checked_lab_diabetes">Pemeriksaan Lab Diabetes</string>
    <string name="monitoring">Monitoring</string>
    <string name="monitoring_diabetes">Monitoring Kadar Gula Darah</string>
    <string name="history">⌛ Riwayat Deteksi</string>
    <string name="you_dont_have_history_detection">- Anda tidak memiliki riwayat deteksi -</string>
    <string name="lihat_selengkapnya">Lihat selengkapnya</string>
    <string name="new_article">🔥 Artikel Terbaru</string>
    <string name="lihat_article_lainnya">Lihat artikel lainnya</string>
    <string name="product_recommended">♥ Produk Rekomendasi Diabetes</string>
    <string name="lihat_produk_selengkapnya">Lihat produk selengkapnya</string>
    <string name="detecting_diabetes">Sedang mendeteksi Diabetes…</string>
    <string name="skip">Lewati</string>
    <string name="screening_independently">Lakukan Screening Mandiri</string>
    <string name="do_test_diabetes_message">Lakukan pengecekan risiko Diabetes secara mudah dan gratis dalam beberapa langkah, Segera cek risiko Diabetes kamu sebelum terlambat</string>
    <string name="image_onBoarding_1">Image OnBoarding 1</string>
    <string name="image_onBoarding_2">Image OnBoarding 2</string>
    <string name="image_onBoarding_3">Image OnBoarding 3</string>
    <string name="product_name_affiliation">Insulin KW Super</string>
    <string name="price">Rp 100.000</string>
    <string name="product_affiliation">Product Affiliation</string>
    <string name="provider_article">Provider Article</string>
    <string name="description">Lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsun</string>
    <string name="history_date">05 Mei 2022 | 17.00</string>
    <string name="settings_application">Pengaturan Aplikasi</string>
    <string name="reminder_alarm">Pengingat Deteksi Rutin</string>
    <string name="regarding_application">Seputar Aplikasi</string>
    <string name="red_zone">Zona Merah</string>
    <string name="information_detail_about_diabetes">Segala Informasi tentang Diabetes</string>
    <string name="search_product_diabetes">Kamu bisa mencari berbagai informasi mengenai diabetes dan dapatkan rekomendasi produk perawatan Diabetes melalui satu Aplikasi</string>
    <string name="step_for_login">Satu langkah saja untuk memulai segalanya</string>
    <string name="login_description">Kamu hanya perlu masuk menggunakan akun google kamu untuk bisa menikmati fitur Insul.in. Data kamu akan tersimpan pada akun google kamu</string>
    <string name="product_category">Kategori Produk</string>
    <string name="finish_detection">Deteksi Selesai</string>
    <string name="detection_status">Mendeteksi Status Diabetes</string>
    <string name="error">Error</string>
    <string name="have_you_been_lost_hair">Apakah sering mengalami kerontokan pada rambut akhir-akhir ini?</string>
    <string name="question_about_delayed_healing">Apakah luka pada tubuh sulit atau lama untuk kering?</string>
    <string name="question_about_genitial_thrus">Apakah ada infeksi jamur atau rasa gatal pada alat vital (kelamin)?</string>
    <string name="question_about_irritability">Apakah anda sering merasa mudah marah / emosi akhir-akhir ini?</string>
    <string name="question_about_itching">Apakah anda merasa gatal-gatal pada tubuh?</string>
    <string name="question_about_muscle_stiffness">Apakah sering mengalami kaku pada otot setelah melakukan kegiatan intensif (seperti berdiri / duduk lama)?</string>
    <string name="question_about_obesity">Apakah mengalami kelebihan berat badan?</string>
    <string name="question_about_partial_paresis">Mengalami gangguan pada syaraf seperti lemas saat menggenggam barang?</string>
    <string name="question_about_polydipsia">Apa anda sering merasa kehausan (bahkan setelah minum) akhir-akhir ini?</string>
    <string name="question_about_polyphagia">Apakah anda merasa sering lapar atau nafsu makan meningkat akhir-akhir ini?</string>
    <string name="question_about_polyuria">Apakah anda sering merasa ingin buang air kecil akhir-akhir ini?</string>
    <string name="question_about_weakness">Apakah anda merasa lemas / letih akhir-akhir ini?</string>
    <string name="question_about_weightloss">Apakah anda merasa turun berat secara badan drastis akhir-akhir ini?</string>
    <string name="question_about_visual_blurring">Apakah anda merasa penglihatan mengalami pengaburan?</string>
    <string name="cancel_detection">Batalkan Deteksi</string>
    <string name="shortcut_detection">Deteksi Diabetes</string>
</resources>