<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark"
    tools:context=".ui.home.fragment.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="70dp">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_home_banner"
                android:paddingHorizontal="8dp"
                android:paddingBottom="16dp">

                <ImageView
                    android:id="@+id/app_logo"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/ic_app_logo"
                    android:contentDescription="@string/logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_black"
                    android:letterSpacing="0.1"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/app_logo" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_avatar"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_below="@id/app_name"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:src="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/app_name" />

                <TextView
                    android:id="@+id/user_display_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/welcome_user"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/user_avatar"
                    app:layout_constraintStart_toEndOf="@+id/user_avatar"
                    app:layout_constraintTop_toTopOf="@+id/user_avatar" />

                <ImageView
                    android:id="@+id/btn_help"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/help"
                    android:padding="8dp"
                    android:src="@drawable/ic_baseline_help"
                    app:layout_constraintBottom_toBottomOf="@+id/user_display_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/user_display_name"
                    app:tint="@color/white" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                style="@style/TextSubTitle"
                android:layout_marginTop="20dp"
                android:text="@string/home_text_sub_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:id="@+id/shortuct_detection"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:src="@drawable/shortcut_ambulance">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/shortcut_detection"
                        android:src="@drawable/shortcut_detection" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="4dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/shortcut_detection"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/shortuct_hospital"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:src="@drawable/shortcut_ambulance">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/shortcut_hospital"
                        android:src="@drawable/shortcut_hospital" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="4dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/near_hospital_home"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/shortuct_affiliation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:src="@drawable/shortcut_medicine">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/affiliation"
                        android:src="@drawable/shortcut_affiliation" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="4dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/recommended_product_diabetes"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="horizontal"
                android:baselineAligned="false"
                android:weightSum="3">

                <LinearLayout
                    android:id="@+id/shortuct_consultation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/consultation"
                        android:src="@drawable/shortcut_consultation" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="4dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/consultation_with_doctor"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/shortuct_lab"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/lab"
                        android:src="@drawable/shortcut_lab" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="4dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/checked_lab_diabetes"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/shortuct_community"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/community"
                        android:src="@drawable/shortcut_community" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="4dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/diabetes_community"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                style="@style/TextSubTitle"
                android:layout_marginTop="16dp"
                android:text="@string/history" />

            <ProgressBar
                android:id="@+id/progress_bar_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminateTint="@color/primary" />

            <LinearLayout
                android:id="@+id/label_never_detecting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/you_dont_have_history_detection"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/btn_detection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="16dp"
                    android:fontFamily="@font/poppins_medium"
                    android:padding="8dp"
                    android:text="@string/try_detection"
                    android:textAlignment="center"
                    android:textColor="@color/secondary" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                tools:itemCount="3"
                tools:listitem="@layout/item_history_list" />

            <TextView
                android:id="@+id/btn_more_detection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_horizontal"
                android:paddingVertical="10dp"
                android:text="@string/lihat_selengkapnya"
                android:textColor="@color/primary_dark"
                android:textSize="14sp" />
            <TextView
                style="@style/TextSubTitle"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/new_article" />

            <ProgressBar
                android:id="@+id/progress_bar_article"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminateTint="@color/primary" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_article"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                tools:itemCount="3"
                tools:listitem="@layout/item_article_list" />

            <TextView
                android:id="@+id/btn_more_article"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_horizontal"
                android:paddingVertical="10dp"
                android:text="@string/lihat_article_lainnya"
                android:textColor="@color/primary_dark"
                android:textSize="14sp" />

            <TextView
                style="@style/TextSubTitle"
                android:text="@string/product_recommended" />

            <ProgressBar
                android:id="@+id/progress_bar_affiliation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminateTint="@color/primary" />

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_affiliation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="15"
                    tools:listitem="@layout/item_affiliation_compact" />
            </HorizontalScrollView>

            <TextView
                android:id="@+id/btn_more_affiliation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_horizontal"
                android:paddingVertical="10dp"
                android:text="@string/lihat_produk_selengkapnya"
                android:textColor="@color/primary_dark"
                android:textSize="14sp" />
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</FrameLayout>