<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_gravity="center"
    android:background="@drawable/custom_background_rounded_white"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/dialog_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_bold"
                android:maxLines="2"
                android:text="@string/title_dialog"
                android:textColor="@color/state_primary_dark"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/dialog_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/text_dialog_information"
                android:textColor="@color/black"
                android:textSize="14sp" />


            <Button
                android:id="@+id/btn_ok"
                style="@style/Button.Primary"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/ok" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>